Paginated Added in Admin's Category Module